css/app.css
body {
    margin: 0;
}

main {
    height: 100vh;
    width: 100vw;
    background-color: #2C2F33;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    overflow: auto;
    -ms-overflow-style: none;
}

main::-webkit-scrollbar { width: 0 !important }

.shadow {
    -webkit-box-shadow: 0px 6px 12px -2px rgba(0,0,0,0.69);
    -moz-box-shadow: 0px 6px 12px -2px rgba(0,0,0,0.69);
    box-shadow: 0px 6px 12px -2px rgba(0,0,0,0.69);
}

.navbar {
    padding-top: 0.2em;
    background-color: #2C2F33;
    position: fixed;
    z-index: 1;
}

.navbar .loader {
    height: 5px;
    background-color: #99aab5;
    width: 0%;
    transition: 0.5s ease width;
}

.navbar hr {
    border-color: #99aab5;
    margin: 0;
}

.navbar ul {
    color: #99aab5;
    list-style: none;
    padding: 0;
    display: inline-flex;
    width: 100vw;
    min-height: 50px;
}

.navbar ul li {
    display: inherit;
    margin-right: 0.4em;
}

.navbar ul li:first-child {
    padding-left: 1.5em;
}

.navbar ul li:first-child button svg {
    height: 2em;
    width: auto;
    position: relative;
    bottom: 5px;
}

.navbar ul li:last-child {
    margin-left: auto;
    margin-right: 1.5em;
    position: relative;
    transition: 0.15s all ease-in-out;
}

.navbar ul li:last-child button {
    z-index: 2;
}

.navbar ul li:last-child button.menuButton:active {
    background-color: #1D1E1F;
}

.navbar ul li:last-child.hover {
    transform: translate(0px, -2px);
}

.navbar ul li:last-child img {
    height: 2em;
    float: left;
    margin-right: 0.3em;
    border-radius: 50%;
}

.navbar ul.dropdown {
    display: none;
    position: absolute;
    width: auto;
    padding-top: 3em;
    background-color: #1D1E1F;
    right: 0;
    left: 0;
    text-align: center;
    max-height: 0;
    min-height: 0;
    overflow: hidden;
    transition: max-height 0.35s ease-in;
}

.navbar ul.dropdown.active {
    display: list-item;
    max-height: 100vh;
}

.navbar ul.dropdown li {
    padding: 0;
    margin: 0;
}

.navbar ul.dropdown li button {
    width: 100%;
    transition: 0.15s all ease-in-out;
    font-size: .9em;
    padding-top: .5em;
    padding-bottom: .5em;
}

.navbar ul.dropdown li button:hover {
    background-color: #99aab5;
    color: #1D1E1F;
}

.navbar ul.dropdown li:last-child {
    margin-bottom: 0.6em;
    color: #dc322f
}

.navbar ul.dropdown li:last-child button:hover {
    background-color: #dc322f;
    color: #1D1E1F;
}

.navbar ul.dropdown li hr {
    display: none;
}

.navbar ul.dropdown li:last-child hr {
    display: inherit;
    margin: auto;
    margin-top: 0.6em;
    margin-bottom: 0.6em;
    width: 30%;
    background-color: #99aab5
}

.navbar ul li button {
    text-decoration: none;
    background-color: inherit;
    border: none;
    color: inherit;
    font-size: 1.2em;
    cursor: pointer;
    display: inherit;
    align-items: center;
}

.navbar ul li button:focus {
    outline: 0;   
}

#content {
    position: absolute;
    height: calc(100vh - 5.5em);
    bottom: 0;
    left: 0;
    top: auto;
    width: inherit;
}

#dashboard {
    height: inherit;
    width: inherit;
}

#serverToolbar {
    text-align: center;
    color: white;
    padding-bottom: 1em;
    padding-top: 4em;
    width: inherit;
}

#serverToolbar h1 {
    width: max-content;
    margin: auto;
}

#serverToolbar h3 {
    margin: 0;
    text-align: right;
    margin-right: 2vw;
    width: max-content;
    margin-left: auto;
}

.switch {
    display: inline-block;
    height: 34px;
    position: relative;
    width: 60px;
  }
  
  .switch input {
    display:none;
  }
  
  .slider {
    background-color: #1D1E1F;
    bottom: 0;
    cursor: pointer;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    transition: .4s;
  }
  
  .slider:before {
    background-color: #fff;
    bottom: 4px;
    content: "";
    height: 26px;
    left: 4px;
    position: absolute;
    transition: .4s;
    width: 26px;
  }
  
  input:checked + .slider {
    background-color: #99aab6;
  }
  
  input:checked + .slider:before {
    transform: translateX(26px);
  }
  
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }

#serverFilter {
    
}

.serverList {
    width: inherit;
    text-align: center;
    margin-top: 5.5em;
    margin: 0;
    padding: 0;
    display: block;
}

.serverList .serverCard {
    color: white;
    display: inline-block;
    height: 53vw;
    width: 40vw;
    max-height: 17rem;
    max-width: 14rem;
    margin: 1em;
    border-width: 2px;
    border-color: #99aab5;
    border-radius: 10px;
    border-style: solid;
    overflow: hidden;
    transition: box-shadow 0.15s ease;
}

.serverList .serverCard button {
    text-decoration: none;
    background-color: inherit;
    border: none;
    color: inherit;
    cursor: pointer;
    align-items: center;
    width: 100%;
    padding: 0;
}

.serverList .serverCard button img {
    width: 100%;
}

